examples/test/testpolicy16130.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy16130
  namespace: namespace179
spec:
  podSelector:
    matchLabels:
      key47: value22
      key45: value40
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key3: value2
          key48: value13
          key12: value9
      podSelector:
        matchLabels:
          key18: value10
          key26: value24
